# hvac-cpq

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  turbo.json
.claude/: settings.json
apps/backend/: .env.example  Dockerfile  package.json  pyproject.toml
apps/backend/alembic/versions/: a1b2c3d4e5f6_code_review_fixes.py  ddcc497f7e6a_add_product_rules.py
apps/backend/app/: main.py
apps/backend/app/api/: dependencies.py
apps/backend/app/api/routes/: agent.py  product_configurations.py
apps/backend/app/core/: config.py  exceptions.py  family_config.py  logging.py  request_context.py
apps/backend/app/db/: __init__.py  models.py
apps/backend/app/observability/: tracing.py
apps/backend/app/repositories/: product_rule_repository.py
apps/backend/app/schemas/: agent.py  error.py  pricing.py  product_configuration.py  product_family.py  product_pricing_rule.py  product_quote.py  product_rule.py  technical_calculation.py
apps/backend/app/services/: configuration_validator.py  order_code_service.py  pricing_engine.py  product_configuration_service.py  product_pricing_rule_service.py  product_quote_service.py  rule_engine.py  technical_calculation_service.py
apps/backend/app/services/agent/: service.py  tool_definitions.py  tools.py
apps/backend/scripts/: seed_demo_data.py
apps/backend/tests/: conftest.py  test_agent_api.py  test_agent_evaluation.py  test_agent_tools.py  test_error_handling.py  test_health.py  test_product_configurations.py  test_technical_calculations.py
(+95 files in other folders)
